--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,67 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>
+      <ion-icon name="ios-chatbubbles"></ion-icon>
+      SpeakOutPH
+    </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <button ion-button color="danger" full (click)="presentActionSheet()">
+    ASK HELP NOW
+  </button>
+  <ion-card>
+    <ion-card-header>
+      Emergency Contacts
+    </ion-card-header>
+    <ion-card-content>
+
+      <ion-item>
+        <ion-avatar item-start>
+          <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg">
+        </ion-avatar>
+        <h2>Jadurani Davalos</h2>
+        <p>+639178625033</p>
+      </ion-item>
+      <ion-item>
+        <ion-avatar item-start>
+          <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg">
+        </ion-avatar>
+        <h2>Jadurani Davalos</h2>
+        <p>+639178625033</p>
+      </ion-item>
+      <ion-item>
+        <ion-avatar item-start>
+          <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg">
+        </ion-avatar>
+        <h2>Jadurani Davalos</h2>
+        <p>+639178625033</p>
+      </ion-item>
+      <ion-item>
+        <ion-avatar item-start>
+          <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg">
+        </ion-avatar>
+        <h2>Jadurani Davalos</h2>
+        <p>+639178625033</p>
+      </ion-item>
+
+      <ion-item>
+        <ion-avatar item-start>
+          <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg">
+        </ion-avatar>
+        <h2><i>Set an emergency contact</i></h2>
+        <!-- <p>+639178625033</p> -->
+      </ion-item>
+      <ion-item>
+        <ion-avatar item-start>
+          <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg">
+        </ion-avatar>
+        <h2>
+          <i>Set an emergency contact</i>
+        </h2>
+        <!-- <p>+639178625033</p> -->
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
