meow commit 2, uses ngFor for repeated elements

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,52 +15,13 @@
     <ion-card-header>
       Emergency Contacts
     </ion-card-header>
-    <ion-card-content>
-
+    <ion-card-content *ngFor="let contactDetails of contactsList">
       <ion-item (click)="meow()">
         <ion-avatar item-start>
           <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg">
         </ion-avatar>
         <h2>Jadurani Davalos</h2>
         <p>+639178625033</p>
-      </ion-item>
-      <ion-item>
-        <ion-avatar item-start>
-          <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg">
-        </ion-avatar>
-        <h2>Jadurani Davalos</h2>
-        <p>+639178625033</p>
-      </ion-item>
-      <ion-item>
-        <ion-avatar item-start>
-          <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg">
-        </ion-avatar>
-        <h2>Jadurani Davalos</h2>
-        <p>+639178625033</p>
-      </ion-item>
-      <ion-item>
-        <ion-avatar item-start>
-          <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg">
-        </ion-avatar>
-        <h2>Jadurani Davalos</h2>
-        <p>+639178625033</p>
-      </ion-item>
-
-      <ion-item>
-        <ion-avatar item-start>
-          <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg">
-        </ion-avatar>
-        <h2><i>Set an emergency contact</i></h2>
-        <!-- <p>+639178625033</p> -->
-      </ion-item>
-      <ion-item>
-        <ion-avatar item-start>
-          <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg">
-        </ion-avatar>
-        <h2>
-          <i>Set an emergency contact</i>
-        </h2>
-        <!-- <p>+639178625033</p> -->
       </ion-item>
     </ion-card-content>
   </ion-card>
