--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,8 +17,9 @@
       <b>Emergency Contacts</b>
     </ion-card-header>
 
-    <ion-card-content *ngFor="let contactDetails of contactsList">
-      <ion-item (click)="meow()">
+    <ion-card-content>
+      <ion-item *ngFor="let contactDetails of contactsList; let contactIndex = index"
+        (click)="meow()">
         <ion-avatar item-start>
           <!-- <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg"> -->
           <img src="{{contactDetails.url}}">
