Added ContactsList Provider and disabled ask help button when user hasn't entered a contact yet

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,9 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button color="danger" large full (click)="presentActionSheet()">
+  <button ion-button color="danger" large full
+    [disabled]="!contactsList || !contactsList.length"
+    (click)="presentActionSheet()">
     ASK HELP NOW
   </button>
 
@@ -19,13 +21,20 @@
 
     <ion-card-content>
       <ion-item *ngFor="let contactDetails of contactsList; let contactIndex = index"
-        (click)="meow()">
+        (click)="selectNewContact(contactIndex)">
         <ion-avatar item-start>
           <!-- <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg"> -->
-          <img src="{{contactDetails.url}}">
+          <img src="{{contactDetails.photoUrl}}">
         </ion-avatar>
         <h2>{{contactDetails.displayName}}</h2>
         <p>{{contactDetails.phoneNumber}}</p>
+      </ion-item>
+      <ion-item *ngFor="let dummyDetails of dummyList; let dummyIndex = index"
+        (click)="selectNewContact(contactIndex)">
+        <ion-avatar item-start>
+          <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg">
+        </ion-avatar>
+        <h2 style="font-color:gray;"><i>{{dummyDetails.displayName}}</i></h2>
       </ion-item>
     </ion-card-content>
   </ion-card>
