some optimizations -- reload on update data

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -30,7 +30,7 @@
         <p>{{contactDetails.phoneNumber}}</p>
       </ion-item>
       <ion-item *ngFor="let dummyDetails of dummyList; let dummyIndex = index"
-        (click)="selectNewContact(contactIndex)">
+        (click)="selectNewContact(-1)">
         <ion-avatar item-start>
           <img src="https://1.bp.blogspot.com/-Tg_1__E2p08/V4Ug1iPjr_I/AAAAAAAACC0/MuoP9ZSpcsU3ZeoJ7Xx65OUTwVEYfReMwCK4B/s1600/best%2Bavatar%2Bimage.jpg">
         </ion-avatar>
