latest not-so-breaking change

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -30,7 +30,7 @@
       </ion-item>
       <ion-item *ngFor="let dummyDetails of dummyList; let dummyIndex = index"
         (click)="selectNewContact(-1)">
-        <button ion-button icon-only clear item-start medium>
+        <button ion-button icon-only clear item-start large>
           <ion-icon name="ios-contact-outline" ></ion-icon>
         </button>
         <h2 style="font-color:gray;"><i>{{dummyDetails.displayName}}</i></h2>
